* Task/Bug Id:  Bug 16614 -  Specimen Type not set for containers created via BO * Code Reviewed By: Sagar On : 29/07/2010 * Technical Details:  Added a new method called from StorageContainerBizLogic to set specimen types if they are not set by user and their classes are selected. * Unit tested:   StorageContainerTestCases.java::testAddStorageContainerWithSpClass(), testAddStrContWithSpClassAndSpType() * Developer Notes: Added a new method called from StorageContainerBizLogic to set specimen types if they are not set by user and their classes are selected. * Current Build++ 272 : 289 * PMD - 272     Checkstyle - X     Findbugs - X     CPD – X
SVN-Revision: 24732